<resources>
    <string name="app_name">P1GOL</string>
    <string name="titulo1">TECNOLOGICO DE ESTUDIOS SUPERIORES DEL ORIENTE DEL ESTADO DE MEXICO</string>
    <string name="LOGO">TESO</string>
    <string name="edomex">ESTADO</string>
    <string name="titulo2">PROGRAMANDO MOVILES</string>
    <string name="nombre">ORTEGA LOPEZ GUSTAVO</string>
    <string name="grupo">GRUPO 7S11</string>
    <string name="todo">ESTADO</string>
</resources>
